kuard/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  selector:
    app: kuard
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
