kuard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  rules:
  - host: kuard.platform-sandbox-1.tanzu-poc.company.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
           name: kuard
           port:
             number: 8080
